WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113790
Web Inspector: memory instrumentation for external arrays is broken
https://bugs.webkit.org/show_bug.cgi?id=113790
Summary
Web Inspector: memory instrumentation for external arrays is broken
Yury Semikhatsky
Reported
2013-04-02 08:58:10 PDT
r144527
broke this when skipped all raw pointers in the memory instrumentation traversal algorithm. Now we don't see JS externals arrays in the native memory snapshot.
Attachments
Patch
(9.67 KB, patch)
2013-04-02 09:06 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2013-04-02 09:06:12 PDT
Created
attachment 196154
[details]
Patch
Ilya Tikhonovsky
Comment 2
2013-04-02 09:13:10 PDT
Comment on
attachment 196154
[details]
Patch LGTM
WebKit Review Bot
Comment 3
2013-04-02 11:12:39 PDT
Comment on
attachment 196154
[details]
Patch Clearing flags on attachment: 196154 Committed
r147465
: <
http://trac.webkit.org/changeset/147465
>
WebKit Review Bot
Comment 4
2013-04-02 11:12:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug