Web Inspector: memory instrumentation for external arrays is broken https://bugs.webkit.org/show_bug.cgi?id=113790

Source/WebCore:

Report pointers to external arrays as retaining ones to make sure their
size is counted correctly.

Reviewed by Pavel Feldman.

Test: inspector/profiler/memory-instrumentation-external-array.html

* inspector/InspectorMemoryAgent.cpp:

Source/WTF:

Reviewed by Pavel Feldman.

* wtf/MemoryInstrumentationArrayBufferView.h: report buffer pointer as retaining one as
we know that the pointer is not broken.
(WTF::reportMemoryUsage):

LayoutTests:

Test that JS external resources size includes size of JS external arrays
created in the inspected page.

Reviewed by Pavel Feldman.

* inspector/profiler/memory-instrumentation-external-array-expected.txt: Added.
* inspector/profiler/memory-instrumentation-external-array.html: Added.
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/TestExpectations:


git-svn-id: svn://svn.chromium.org/blink/trunk@147465 bbb929c8-8fbe-4397-9dbb-9b2b20218538