third_party/WebKit/Source/WTF/wtf/MemoryInstrumentationArrayBufferView.h
@@ -40,7 +40,7 @@ namespace WTF {
 inline void reportMemoryUsage(const ArrayBufferView* arrayBufferView, MemoryObjectInfo* memoryObjectInfo)
 {
     MemoryClassInfo info(memoryObjectInfo, arrayBufferView);
-    info.addMember(arrayBufferView->buffer().get(), "buffer");
+    info.addMember(arrayBufferView->buffer().get(), "buffer", RetainingPointer);
 }
 
 inline void reportMemoryUsage(const ArrayBuffer* arrayBuffer, MemoryObjectInfo* memoryObjectInfo)
