third_party/WebKit/Source/WebCore/inspector/InspectorMemoryAgent.cpp
@@ -183,7 +183,7 @@ public:
 private:
     virtual void visitJSExternalArray(ArrayBufferView* arrayBufferView)
     {
-        m_memoryClassInfo->addMember(arrayBufferView, "externalArray");
+        m_memoryClassInfo->addMember(arrayBufferView, "externalArray", WTF::RetainingPointer);
     }
 
     mutable MemoryClassInfo* m_memoryClassInfo;
